[project]
name = "password-generator"
version = "0.1.0"
description = "A secure command-line password generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyperclip>=1.9,<2"]

[dependency-groups]
dev = ["pytest>=8,<10", "ruff>=0.11,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
